# STZ_labki

./: README.md
lab1/: CMakeLists.txt  main.cpp  telega.cpp  telega.h
lab1_2/: CMakeLists.txt  field.cpp  field.h  laba1_dop2.cpp  main.cpp  obj.cpp  obj.h
lab2/: CMakeLists.txt  main.cpp  operations.cpp  operations.h  timer.cpp
lab3/: CMakeLists.txt  anti_terrorist_waffen.cpp  anti_terrorist_waffen.h  main.cpp  robotics.cpp  robotics.h  trackbar.cpp  trackbar.h  zavod.cpp  zavod.h
